--- a/client/src/app/play/components/KeyboardContainer/keyboardContainer.scss
+++ b/client/src/app/play/components/KeyboardContainer/keyboardContainer.scss
@@ -28,7 +28,7 @@
 			--font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
 				"Open Sans", "Helvetica Neue", sans-serif;
 			@include general-properties(auto, auto, white);
-			@include font(var(--font-family), 1.2rem, var(--color), center);
+			@include font(var(--font-family), 1.2rem, black, center);
 			flex: 1 1 auto;
 			border-radius: 6px;
 			border: 1px solid rgb(91, 90, 90);
