--- a/client/src/style/_main.scss
+++ b/client/src/style/_main.scss
@@ -10,6 +10,7 @@
   --mainBackground: rgb(255, 194, 194);
   --fontRoboto: "Roboto", sans-serif;
   --fontVarellaRound: "Varela Round", sans-serif;
+  --filter: -1;
 }
 
 [data-theme="dark"] {
@@ -17,9 +18,10 @@
   --color: white;
   --menuBackground: rgb(37 60 37);
   --mainBackground: rgb(61 61 64);
+  --filter: 1;
 
   [data-theme-confirmation] {
-    box-shadow: 0px 0px 0px 20px white inset;
+    box-shadow: 0px 0px 7px 0px rgb(0, 0, 0);
     border-radius: 50%;
     transition: box-shadow 1s;
   }
